// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Search Check snapshots should renders correctly with value 1`] = `
<div
  className="consonant-search"
>
  <label>
    <span
      className="consonant-search--input-title"
    >
      Search
    </span>
    <span
      className="consonant-search--input-wrapper"
    >
      <input
        data-testid="search-input"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="search text"
        required={true}
        type="search"
        value=""
      />
      <button
        className="consonant-search--input-clear"
        onClick={[Function]}
        title="Click to clear search query"
        type="button"
      >
        clear
      </button>
    </span>
  </label>
</div>
`;

exports[`Consonant/Search Check snapshots should renders correctly without value 1`] = `
<div
  className="consonant-search"
>
  <label>
    <span
      className="consonant-search--input-title"
    >
      Search
    </span>
    <span
      className="consonant-search--input-wrapper"
    >
      <input
        data-testid="search-input"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="search text"
        required={true}
        type="search"
        value="search value"
      />
      <button
        className="consonant-search--input-clear"
        onClick={[Function]}
        title="Click to clear search query"
        type="button"
      >
        clear
      </button>
    </span>
  </label>
</div>
`;
